# intel-pfr-signing-utility

./: .gitignore  CMakeLists.txt  Makefile  README  argparse.c  argparse.h  args.h  blocks.h  blocksign.c  blocksign.h  blocksign.vcxproj  blocksign.vcxproj.filters  cpld.c  cpld.h  log.c  log.h  main.c  s_helpers.c  s_helpers.h  sslhelper.c  sslhelper.h  tcg.h
