cmake_minimum_required(VERSION 2.8.10 FATAL_ERROR)
project(blocksign C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
find_package(OpenSSL REQUIRED)
#PKG_SEARCH_MODULE(LIBCRYPTO REQUIRED libcrypto openssl)
PKG_CHECK_MODULES(LIBXML2 libxml-2.0 REQUIRED)
#find_package(libxml2 REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})
include_directories(${LIBXML2_INCLUDE_DIRS})
add_executable(blocksign argparse.c blocksign.c sslhelper.c main.c s_helpers.c log.c)
target_link_libraries (blocksign ${OPENSSL_CRYPTO_LIBRARY})
target_link_libraries(blocksign xml2)
install (TARGETS blocksign DESTINATION bin)
